--- a/config/i3/config
+++ b/config/i3/config
@@ -387,7 +387,8 @@ bindsym XF86AudioMute         exec --no-startup-id "BLOCK_BUTTON=3 ~/.config/i3/
 bindsym XF86AudioRaiseVolume  exec --no-startup-id "BLOCK_BUTTON=4 ~/.config/i3/scripts/volume"
 bindsym XF86AudioLowerVolume  exec --no-startup-id "BLOCK_BUTTON=5 ~/.config/i3/scripts/volume"
 
-bindsym XF86AudioPlay   exec --no-startup-id playerctl play
+# play is usually play/pause, so we bind to both
+bindsym XF86AudioPlay   exec --no-startup-id playerctl play-pause
 bindsym XF86AudioPause  exec --no-startup-id playerctl pause
 bindsym XF86AudioNext   exec --no-startup-id playerctl next
 bindsym XF86AudioPrev   exec --no-startup-id playerctl previous
