--- a/config/discord/settings.json
+++ b/config/discord/settings.json
@@ -1,5 +1,6 @@
 {
   "BACKGROUND_COLOR": "#202225",
+  "DANGEROUS_ENABLE_DEVTOOLS_ONLY_ENABLE_IF_YOU_KNOW_WHAT_YOURE_DOING": true,
   "OPEN_ON_STARTUP": false,
   "MINIMIZE_TO_TRAY": false,
   "IS_MAXIMIZED": false,
