git: sync lfs config

--- a/config/git/config
+++ b/config/git/config
@@ -74,3 +74,8 @@
   rulerWidth = 47
 [help]
   autocorrect = 20
+[filter "lfs"]
+  smudge = git-lfs smudge -- %f
+  process = git-lfs filter-process
+  required = true
+  clean = git-lfs clean -- %f
