--- a/config/rofimoji.rc
+++ b/config/rofimoji.rc
@@ -1,3 +1,3 @@
-action = [type, copy]
+action = [clipboard, copy]
 files = [emojis, general_punctuation, latin-1_supplement, latin_extended-a]
 skin-tone = neutral
