--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -105,7 +105,7 @@ active_tab_font_style normal
 
 # open whole scrollback in PAGER
 map f1 show_scrollback
-# search google for selection
+# search the web for selection
 map kitty_mod+x pass_selection_to_program ~/scripts/pass-kitty-selection-to-firefox.sh
 map ctrl+alt+x pass_selection_to_program ~/scripts/pass-kitty-selection-to-firefox.sh
 
