--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -1,4 +1,4 @@
-music_directory "~/music/lossless"
+music_directory "~/music/"
 
 playlist_directory "~/.local/share/mpd/playlists/"
 db_file            "~/.local/share/mpd/database"
