--- a/config/discord/settings.json
+++ b/config/discord/settings.json
@@ -1,5 +1,5 @@
 {
-  "BACKGROUND_COLOR": "#202225",
+  "BACKGROUND_COLOR": "#121214",
   "DANGEROUS_ENABLE_DEVTOOLS_ONLY_ENABLE_IF_YOU_KNOW_WHAT_YOURE_DOING": true,
   "OPEN_ON_STARTUP": false,
   "MINIMIZE_TO_TRAY": false,
@@ -7,9 +7,10 @@
   "IS_MINIMIZED": false,
   "SKIP_HOST_UPDATE": true,
   "WINDOW_BOUNDS": {
-    "x": 2562,
-    "y": 28,
-    "width": 1076,
-    "height": 1192
-  }
+    "x": 0,
+    "y": 0,
+    "width": 1074,
+    "height": 1040
+  },
+  "chromiumSwitches": {}
 }
