--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Arc-Dark
-gtk-icon-theme-name=Flat-Remix-Blue-Dark
+gtk-theme-name=Fluent-purple-Dark
+gtk-icon-theme-name=Fluent-pink-dark
 gtk-font-name=Cantarell 11
 gtk-cursor-theme-name=Breeze_Hacked
 gtk-cursor-theme-size=0
@@ -13,3 +13,4 @@ gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=rgb
