move to Angoulême

--- a/config/gammastep/config.ini
+++ b/config/gammastep/config.ini
@@ -4,6 +4,6 @@ temp-night=4200
 location-provider=manual
 
 [manual]
-# Paris Porte d'Ivry
-lat=48.821
-lon=2.368
+# Angoulême
+lat=45.649
+lon=0.157
