--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,7 +16,6 @@
       create: true
       glob: true
       path: config/*
-    ~/.gnupg/gpg-agent.conf: gnupg/gpg-agent.conf
     ~/.gtkrc-2.0:
       force: true
     ~/.icons/default/index.theme:
@@ -27,6 +26,10 @@
       create: true
       glob: true
       path: local/share/*
+      exclude: [local/share/gnupg]
+    ~/.local/share/gnupg/gpg-agent.conf:
+      create: true
+      path: local/share/gnupg/gpg-agent.conf
     ~/.mozilla/firefox/:
       create: true
       glob: true
