--- a/local/share/gnupg/gpg-agent.conf
+++ b/local/share/gnupg/gpg-agent.conf
@@ -1,5 +1,7 @@
 # GPG keys unlocking expires this many seconds after last use
-default-cache-ttl 21600
+default-cache-ttl 28800  # 8h
 
 # but no more than this many seconds in total
-max-cache-ttl 36000
+max-cache-ttl 43200  # 12h
+
+pinentry-program /usr/bin/pinentry-gnome3
