--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,5 +1,5 @@
 [{
-    "output": "!DP-2",
+    "output": "DP-3",
     "layer": "top",
     "position": "bottom",
     "height": 40,
@@ -20,7 +20,6 @@
         "custom/ping",
         "pulseaudio",
         "custom/ddc_brightness",
-        "battery",
         "cpu",
         "temperature",
         "memory",
@@ -66,5 +65,45 @@
         "exec": "~/.dotfiles/waybar-scripts/brightness-desktop P2219HC",
         "on-scroll-up": "echo '+' > /tmp/waybar-ddc-module-P2219HC-rx",
         "on-scroll-down": "echo '-' > /tmp/waybar-ddc-module-P2219HC-rx"
+    }
+}, {
+    "output": "eDP-1",
+    "layer": "top",
+    "position": "bottom",
+    "height": 38,
+    "spacing": 0,
+    "fixed-center": false,
+    "modules-left": [
+        "sway/workspaces"
+    ],
+    "modules-center": [
+        "sway/mode",
+        "keyboard-state",
+        "systemd-failed-units"
+    ],
+    "modules-right": [
+        "mpris",
+        "bluetooth",
+        "network",
+        "custom/ping",
+        "pulseaudio",
+        "custom/brightness_laptop",
+        "battery",
+        "cpu",
+        "temperature",
+        "memory",
+        "custom/updates",
+        "custom/weather",
+        "custom/dunst",
+        "idle_inhibitor",
+        "clock",
+        "privacy",
+        "tray"
+    ],
+    "include": [
+        "~/.config/waybar/config-modules.jsonc"
+    ],
+    "mpris": {
+        "format": "{player_icon}  "
     }
 }]
