--- a/config/sway/config
+++ b/config/sway/config
@@ -327,11 +327,12 @@ bindsym XF86MonBrightnessDown exec "echo '-' > /tmp/waybar-ddc-module-rx"
 bindsym --locked XF86AudioMute         exec "pactl set-sink-mute @DEFAULT_SINK@ toggle"
 bindsym --locked XF86AudioRaiseVolume  exec "pactl set-sink-volume @DEFAULT_SINK@ +4%"
 bindsym --locked XF86AudioLowerVolume  exec "pactl set-sink-volume @DEFAULT_SINK@ -4%"
+bindsym --locked XF86AudioMicMute      exec "pactl set-source-mute @DEFAULT_SOURCE@ toggle"
 
-bindsym --locked XF86AudioPlay   exec playerctl play-pause
-bindsym --locked XF86AudioPause  exec playerctl pause
-bindsym --locked XF86AudioNext   exec playerctl next
-bindsym --locked XF86AudioPrev   exec playerctl previous
+bindsym --locked XF86AudioPlay   exec "playerctl play-pause"
+bindsym --locked XF86AudioPause  exec "playerctl pause"
+bindsym --locked XF86AudioNext   exec "playerctl next"
+bindsym --locked XF86AudioPrev   exec "playerctl previous"
 
 # Cancer
 bindcode 135 exec "play ~/cancer/AH.mp3"
